--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.5",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
+    "bemm": "^1.0.6",
     "express": "^4.18.2",
+    "open-icon": "^0.0.32",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
